# bug-analysis-for-satd

./: .gitignore  CLAUDE.md  EXECUTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  RESULTS_ANALYSIS.md  demo_detection.py  pyproject.toml  requirements.txt  test_detection_strategies.py
configs/: bug_fix_patterns.yaml
results/: README.md  all_results.csv  jfreechart_results.csv  jfreechart_results.json
scripts/: aggregate_llm4szz_results.py  batch_extract.py  check_progress.sh  convert_to_llm4szz.py  extract_bug_fixing_commits.py  full_pipeline.py  run_llm4szz_analysis.py  setup_llm4szz_batch.sh  update_agent_date.py
scripts/cluster/: run_llm4szz.sh  run_llm4szz_only.sh  run_pipeline_gpu.sh  submit_job.sh  submit_llm4szz_batch.sh  test_llm4szz.sh
tests/: test_branch_fallback.py
